add database and initial APIs

--- a/.gitignore
+++ b/.gitignore
@@ -245,6 +245,13 @@ _pkginfo.txt
 # but keep track of directories ending in .cache
 !?*.[Cc]ache/
 
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+*.db-shm
+*.db-wal
+
 # Others
 ClientBin/
 ~$*
