--- a/GameStore/GameStore.Backend/appsettings.json
+++ b/GameStore/GameStore.Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GameStoreContext": "Data Source=GameStore.db"
+  }
 }
